[project]
name = "weather-app-python"
version = "0.1.0"
description = "A weather app that displays weather data in a city the user selects by interfacing with the OpenWeatherMap API."
authors = [
    {name = "Yael Kamil Ribolov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
